# 2024_Langchain_Project

./: README.md
analyze-report-bot(sequential-agent)/: .env  pyproject.toml  test01.ipynb
analyze-report-bot(sequential-agent)/db/: chroma.sqlite3
pandas-bot (single-agent)/: .env  main.py  pyproject.toml  test.ipynb
pandas-bot (single-agent)/sample_answer/실습파일/: answer_test.ipynb
pdf-bot/: main.py  pyproject.toml  test_mmr.ipynb
