[tool.poetry]
name = "pandas-bot"
version = "0.1.0"
description = ""
authors = ["HypedAugust <44738421+HypedAugust@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
langchain = "^0.2.12"
langchain-openai = "^0.1.20"
langchain-experimental = "^0.0.64"
tabulate = "^0.9.0"
pandas = "^2.2.2"
gradio = "^4.41.0"
ptl = "^0.3.0"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
